--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/sispaqescolar/reporte/rptDeclaracionJuradaMatricula2019.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/sispaqescolar/reporte/rptDeclaracionJuradaMatricula2019.jrxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="4a3c7c5b-138b-45a1-8d78-6065941b41ce">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
-	<parameter name="descripcionRubro" class="java.lang.String"/>
+	<property name="ireport.zoom" value="2.357947691000002"/>
+	<property name="ireport.x" value="432"/>
+	<property name="ireport.y" value="82"/>
+	<parameter name="descripcionProcesoAdq" class="java.lang.String"/>
 	<parameter name="codigoEntidad" class="java.lang.String">
 		<defaultValueExpression><![CDATA[10001]]></defaultValueExpression>
 	</parameter>
 	<parameter name="pAnho" class="java.lang.String"/>
+	<parameter name="ubicacionImagenes" class="java.lang.String">
+		<defaultValueExpression><![CDATA["/media/misanchez/Datos/git_paquete/paquete/paquescolar-web/src/main/webapp/resources/images/"]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[select 
     mun.nombre_municipio,
@@ -37,14 +40,24 @@ where
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
+		<band height="140" splitType="Stretch">
 			<textField>
-				<reportElement uuid="b4bbf48d-b6e0-4134-9ba7-a0d578607d92" x="36" y="40" width="471" height="39"/>
+				<reportElement uuid="b4bbf48d-b6e0-4134-9ba7-a0d578607d92" x="37" y="98" width="471" height="39"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA["DECLARACIÓN JURADA DE LA VERACIDAD DE LA INFORMACIÓN\nPLASMADA COMO MATRÍCULA, PREVIA A LAS CONTRATACIONES DE:\n"+$P{descripcionRubro}+" "+$P{pAnho}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["DECLARACIÓN JURADA DE LA VERACIDAD DE LA INFORMACIÓN\nPLASMADA COMO MATRÍCULA, PREVIA A LAS CONTRATACIONES DE:\n"+$P{descripcionProcesoAdq}+" "+$P{pAnho}]]></textFieldExpression>
 			</textField>
+			<image hAlign="Right">
+				<reportElement uuid="e8fec606-a3d8-4009-9f61-58fcdbde6d0d" key="image-2" x="199" y="21" width="149" height="63"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<imageExpression><![CDATA[$P{ubicacionImagenes}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
@@ -75,15 +88,59 @@ $F{CODIGO_ENTIDAD}+"; y por dicha calidad, siendo autoridad competente del centr
 "del programa Dotación de Paquetes Escolares como lo son los zapatos, paquetes de útiles escolares y servicio de confección de uniformes escolares para cada "+
 "estudiante, así como la información relacionada a los números telefónicos de contacto. Declaro ser responsable de las afirmaciones de la presente declaración,"+
 " doy fe de ser cierta y estoy consciente de las consecuencias que implica la falsedad de información o documentos que regulan los Artículos del 283 al 287 del"+
-" Código Penal en lo aplicable"]]></textFieldExpression>
+" Código Penal en lo aplicable."]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="80" splitType="Stretch"/>
+		<band height="20" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band height="108" splitType="Stretch">
+			<staticText>
+				<reportElement uuid="d33ff99e-efd9-4d34-a782-a41b770d7d4a" x="12" y="31" width="35" height="15"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<text><![CDATA[Firma:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="d33ff99e-efd9-4d34-a782-a41b770d7d4a" x="12" y="48" width="50" height="15"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<text><![CDATA[Nombre:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="d33ff99e-efd9-4d34-a782-a41b770d7d4a" x="12" y="65" width="50" height="15"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<text><![CDATA[DUI:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="d33ff99e-efd9-4d34-a782-a41b770d7d4a" x="399" y="31" width="50" height="12"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<text><![CDATA[Sello:]]></text>
+			</staticText>
+			<textField>
+				<reportElement uuid="9a0f29db-058c-4a0b-b20e-0d8f27b90ed6" x="62" y="48" width="317" height="15"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{NOMBRE_MIEMBRO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="853df83c-8fdf-4b00-813e-7fc335e5e5eb" x="62" y="65" width="119" height="15"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$F{NUMERO_DUI}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement uuid="dd3d84c6-27dd-4a91-ad57-f42eb29f108a" x="48" y="42" width="175" height="1"/>
+			</line>
+		</band>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
