--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptDetalleDeBienesUniforme.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptDetalleDeBienesUniforme.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="65172929-4721-4af7-be7e-c359fec8ef19">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="320"/>
+	<property name="ireport.y" value="356"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -340,7 +340,7 @@ where vw.codigo_entidad = $P{pCodigoEntidad}]]>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{pHoraYFecha}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Lugar y Fecha: " + $P{pHoraYFecha}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
