--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptDetalleDeBienesUniforme.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptDetalleDeBienesUniforme.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="65172929-4721-4af7-be7e-c359fec8ef19">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="192"/>
+	<property name="ireport.y" value="103"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -27,6 +27,9 @@
 		<parameter name="pCodEnt" class="java.lang.String">
 			<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 		</parameter>
+		<parameter name="pProceso" class="java.lang.Integer">
+			<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+		</parameter>
 		<queryString>
 			<![CDATA[select 
     case 
@@ -44,13 +47,27 @@
         when tb.id_nivel in (6) and tb.id_producto in (29) then 12
         when tb.id_nivel in (6) and tb.id_producto in (34) then 13
     end no_item,
+    case 
+        when tb.id_nivel in (1) and tb.id_producto in (30) then femenimo
+        when tb.id_nivel in (1) and tb.id_producto in (44) then femenimo
+        when tb.id_nivel in (1) and tb.id_producto in (29) then masculino
+        when tb.id_nivel in (1) and tb.id_producto in (31) then masculino
+        when tb.id_nivel in (1) and tb.id_producto in (34) then masculino
+        when tb.id_nivel in (2) and tb.id_producto in (30) then femenimo
+        when tb.id_nivel in (2) and tb.id_producto in (44) then femenimo
+        when tb.id_nivel in (2) and tb.id_producto in (29) then masculino
+        when tb.id_nivel in (2) and tb.id_producto in (34) then masculino
+        when tb.id_nivel in (6) and tb.id_producto in (30) then femenimo
+        when tb.id_nivel in (6) and tb.id_producto in (44) then femenimo
+        when tb.id_nivel in (6) and tb.id_producto in (29) then masculino
+        when tb.id_nivel in (6) and tb.id_producto in (34) then masculino
+    end can,
     tb.nombre_producto||', '|| niv.descripcion_nivel descripcion,
-    tb.can,
     nvl(res.cantidad,0) cantidad
 from (select 
             tbl.codigo_entidad, 
             tbl.id_nivel, 
-            sum(masculino+femenimo) can,
+            masculino,femenimo,
             cat.nombre_producto,
             cat.codigo_producto,
             cat.id_producto,
@@ -65,13 +82,12 @@ from (select
                     femenimo
                 from estadistica_censo est 
                 where est.codigo_Entidad = $P{pCodEnt} and
-                    est.id_proceso_adq = 14 and
+                    est.id_proceso_adq = $P{pProceso} and
                     est.id_nivel_educativo in (1,3,4,5,6) and
                     (masculino is not null and femenimo is not null and masculino <>0 and femenimo <> 0)
                 order by est.id_nivel_educativo) tbl,
                 catalogo_producto cat
-        where cat.id_producto in (30,44,29,31,34)
-        group by tbl.codigo_entidad, tbl.id_nivel,cat.nombre_producto, cat.codigo_producto, cat.id_producto) tb
+        where cat.id_producto in (30,44,29,31,34)) tb
     left outer join resguardo_bienes res on res.id_nivel_educativo = tb.id_nivel and res.codigo_entidad = tb.codigo_entidad and res.id_producto = tb.id_producto
     inner join nivel_educativo niv on tb.id_nivel = niv.id_nivel_educativo
 where (tb.id_niv_pro <>  33 and tb.id_niv_pro <> 37) and
@@ -79,8 +95,8 @@ where (tb.id_niv_pro <>  33 and tb.id_niv_pro <> 37) and
 order by tb.id_nivel, codigo_producto]]>
 		</queryString>
 		<field name="NO_ITEM" class="java.math.BigDecimal"/>
-		<field name="DESCRIPCION" class="java.lang.String"/>
 		<field name="CAN" class="java.math.BigDecimal"/>
+		<field name="DESCRIPCION" class="java.lang.String"/>
 		<field name="CANTIDAD" class="java.math.BigDecimal"/>
 	</subDataset>
 	<parameter name="pCodigoEntidad" class="java.lang.String">
@@ -89,6 +105,7 @@ order by tb.id_nivel, codigo_producto]]>
 	<parameter name="pRubro" class="java.lang.String"/>
 	<parameter name="pAnho" class="java.lang.String"/>
 	<parameter name="pHoraYFecha" class="java.lang.String"/>
+	<parameter name="pProceso" class="java.lang.Integer"/>
 	<queryString>
 		<![CDATA[select 
     dep.nombre_departamento,
@@ -232,6 +249,9 @@ where vw.codigo_entidad = $P{pCodigoEntidad}]]>
 					<datasetRun subDataset="dsDetalle" uuid="6b03be29-d179-426e-b282-4ba236642f90">
 						<datasetParameter name="pCodEnt">
 							<datasetParameterExpression><![CDATA[$F{CODIGO_ENTIDAD}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="pProceso">
+							<datasetParameterExpression><![CDATA[$P{pProceso}]]></datasetParameterExpression>
 						</datasetParameter>
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
