--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptDetalleDeBienesZapatos.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptDetalleDeBienesZapatos.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="65172929-4721-4af7-be7e-c359fec8ef19">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="192"/>
+	<property name="ireport.y" value="343"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -25,6 +25,9 @@
 	</style>
 	<subDataset name="dsDetalle" uuid="70612839-324a-4b64-8a11-75218ee49bec">
 		<parameter name="pCodEnt" class="java.lang.String">
+			<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+		</parameter>
+		<parameter name="pProceso" class="java.lang.Integer">
 			<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 		</parameter>
 		<queryString>
@@ -59,7 +62,7 @@ from (select
                     femenimo
                 from estadistica_censo est 
                 where est.codigo_Entidad = $P{pCodEnt} and
-                    est.id_proceso_adq = 14 and
+                    est.id_proceso_adq = $P{pProceso} and
                     est.id_nivel_educativo in (1,3,4,5,6) and
                     (masculino is not null and femenimo is not null and masculino <>0 and femenimo <> 0)
                 order by est.id_nivel_educativo) tbl,
@@ -83,6 +86,7 @@ order by tb.id_nivel, codigo_producto]]>
 	<parameter name="pRubro" class="java.lang.String"/>
 	<parameter name="pAnho" class="java.lang.String"/>
 	<parameter name="pHoraYFecha" class="java.lang.String"/>
+	<parameter name="pProceso" class="java.lang.Integer"/>
 	<queryString>
 		<![CDATA[select 
     dep.nombre_departamento,
@@ -226,6 +230,9 @@ where vw.codigo_entidad = $P{pCodigoEntidad}]]>
 					<datasetRun subDataset="dsDetalle" uuid="6b03be29-d179-426e-b282-4ba236642f90">
 						<datasetParameter name="pCodEnt">
 							<datasetParameterExpression><![CDATA[$F{CODIGO_ENTIDAD}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="pProceso">
+							<datasetParameterExpression><![CDATA[$P{pProceso}]]></datasetParameterExpression>
 						</datasetParameter>
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
