inicio de contrataciones 2020

--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean2020.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptActaAdjudicacionBean2020.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="528" leftMargin="42" rightMargin="42" topMargin="39" bottomMargin="39" uuid="244b56df-7b1c-4fca-9e9d-dde2f9b172eb">
 	<property name="ireport.zoom" value="1.3636363636363642"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="192"/>
+	<property name="ireport.y" value="107"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -62,6 +62,8 @@
 	</parameter>
 	<parameter name="descripcionRubro" class="java.lang.String"/>
 	<parameter name="pMiembro" class="java.lang.String"/>
+	<parameter name="pPorcentajeGeo" class="java.lang.String"/>
+	<parameter name="pPorcentajeCapa" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -152,6 +154,12 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 				</image>
 				<subreport isUsingCache="true">
 					<reportElement uuid="263910dc-3ced-4c00-8594-5c09f8bce4e9" key="subreport-3" x="0" y="131" width="528" height="45"/>
+					<subreportParameter name="pPorcentajeCapa">
+						<subreportParameterExpression><![CDATA[$P{pPorcentajeCapa}]]></subreportParameterExpression>
+					</subreportParameter>
+					<subreportParameter name="pPorcentajeGeo">
+						<subreportParameterExpression><![CDATA[$P{pPorcentajeGeo}]]></subreportParameterExpression>
+					</subreportParameter>
 					<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstParticipantes})]]></dataSourceExpression>
 					<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "subRptActaAdjudicacionProveedoresBean2017.jasper"]]></subreportExpression>
 				</subreport>
