1er dia de contrataciones finalizado

--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptDetalleDeBienesUniforme.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/contratos/rptDetalleDeBienesUniforme.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="65172929-4721-4af7-be7e-c359fec8ef19">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="103"/>
+	<property name="ireport.y" value="199"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -71,8 +71,14 @@ from (select
             cat.nombre_producto,
             cat.codigo_producto,
             cat.id_producto,
-            tbl.id_nivel+cat.id_producto id_niv_pro
-        from (select 
+            concat(to_char(tbl.id_nivel),cat.codigo_producto) id_niv_pro
+        from (select
+                codigo_entidad,
+                id_nivel,
+                sum(masculino) masculino,
+                sum(femenimo) femenimo
+            from (
+                select 
                     est.codigo_entidad, 
                     case 
                         when est.id_nivel_educativo in (3,4,5) then 2
@@ -85,12 +91,13 @@ from (select
                     est.id_proceso_adq = $P{pProceso} and
                     est.id_nivel_educativo in (1,3,4,5,6) and
                     (masculino is not null and femenimo is not null and masculino <>0 and femenimo <> 0)
-                order by est.id_nivel_educativo) tbl,
+                order by est.id_nivel_educativo) 
+            GROUP by codigo_entidad, id_nivel order by id_nivel) tbl,
                 catalogo_producto cat
         where cat.id_producto in (30,44,29,31,34)) tb
     left outer join resguardo_bienes res on res.id_nivel_educativo = tb.id_nivel and res.codigo_entidad = tb.codigo_entidad and res.id_producto = tb.id_producto
     inner join nivel_educativo niv on tb.id_nivel = niv.id_nivel_educativo
-where (tb.id_niv_pro <>  33 and tb.id_niv_pro <> 37) and
+where tb.id_niv_pro not in ('132','231','631') and
     (res.id_det_proceso_adq = 40 or res.id_det_proceso_adq is null)
 order by tb.id_nivel, codigo_producto]]>
 		</queryString>
