--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptProveedoresPorcentajeEval.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/notasactas/rptProveedoresPorcentajeEval.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptActaAdjudicacion" pageWidth="612" pageHeight="792" columnWidth="528" leftMargin="42" rightMargin="42" topMargin="39" bottomMargin="39" uuid="244b56df-7b1c-4fca-9e9d-dde2f9b172eb">
-	<property name="ireport.zoom" value="1.3636363636363642"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="431"/>
+	<property name="ireport.zoom" value="3.2153832150000063"/>
+	<property name="ireport.x" value="152"/>
+	<property name="ireport.y" value="775"/>
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -149,7 +149,7 @@
 					<textElement textAlignment="Justified">
 						<font fontName="Arial" size="8"/>
 					</textElement>
-					<textFieldExpression><![CDATA["La Comisión de Evaluación de Ofertas integrada por los abajo firmantes, analiza y redacta la presente Acta de Recomendación dirigida al presidente del Organismo de Administración Escolar del centro educativo ".concat(" que administra el centro educativo ").concat($F{nombreCe}).concat(", código ").
+					<textFieldExpression><![CDATA["La Comisión de Evaluación de Ofertas integrada por los abajo firmantes, analiza y redacta la presente Acta de Recomendación dirigida al presidente del Organismo de Administración Escolar del centro educativo que administra el centro educativo ".concat($F{nombreCe}).concat(", código ").
 concat($F{codigoEntidad}).concat(" a las ").concat($F{horaRegistro}+":"+$F{minutoRegistro}).concat(" horas del día ").
 concat(Herramientas.getNumDia($F{fechaApertura})+" del mes de "+Herramientas.getNomMes($F{fechaApertura})).
 concat(" del año "+Herramientas.getNumAnyo($F{fechaApertura})).concat(", Los/las firmantes nos reunimos para evaluar técnica y económicamente las cotizaciones presentadas para el proceso de compra ").concat($F{descripcionRubro}).concat(", realizado mediante la modalidad ").
@@ -186,27 +186,27 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 						<subreportParameterExpression><![CDATA[$P{pPorcentajeGeo}]]></subreportParameterExpression>
 					</subreportParameter>
 					<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstParticipantes})]]></dataSourceExpression>
-					<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "subRptActaAdjudicacionProveedoresBean2017.jasper"]]></subreportExpression>
+					<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "subRptActaRecomendacion2020.jasper"]]></subreportExpression>
 				</subreport>
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="137" splitType="Stretch">
+			<band height="185" splitType="Stretch">
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-					<reportElement uuid="919a6134-db0d-4f42-b5bb-18e8d50d805f" key="textField-9" x="0" y="119" width="528" height="18"/>
+					<reportElement uuid="919a6134-db0d-4f42-b5bb-18e8d50d805f" key="textField-9" x="0" y="109" width="528" height="14"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineWidth="0.0" lineColor="#000000"/>
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<textElement markup="styled">
+					<textElement verticalAlignment="Middle" markup="styled">
 						<font fontName="Arial" size="9" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Firmamos:"]]></textFieldExpression>
 				</textField>
 				<rectangle>
-					<reportElement uuid="4f69154b-b380-42fb-9f14-5bd21f5c64c7" x="0" y="26" width="528" height="93"/>
+					<reportElement uuid="4f69154b-b380-42fb-9f14-5bd21f5c64c7" x="0" y="26" width="528" height="83"/>
 					<graphicElement>
 						<pen lineWidth="0.25"/>
 					</graphicElement>
@@ -224,15 +224,114 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 					</textElement>
 					<textFieldExpression><![CDATA["Se recomienda adjudicar al proveedor con el porcentaje más alto, por cumplir con las especificaciones requeridas por el Organismo para esta compra y de acuerdo a la justificación siguiente"]]></textFieldExpression>
 				</textField>
+				<staticText>
+					<reportElement uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552" key="staticText-1" x="1" y="132" width="162" height="14"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement>
+						<font fontName="Arial" size="8"/>
+					</textElement>
+					<text><![CDATA[F:__________________________________]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552" key="staticText-1" x="1" y="158" width="162" height="11"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement textAlignment="Center">
+						<font fontName="Arial" size="8"/>
+					</textElement>
+					<text><![CDATA[___________________________________]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="8e37bd84-3b2d-4f23-8a63-b84c3d8d4fcb" x="1" y="169" width="162" height="10"/>
+					<textElement textAlignment="Center">
+						<font fontName="Arial" size="7"/>
+					</textElement>
+					<text><![CDATA[Encargado(a) de Compra del organismo]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552" key="staticText-1" x="184" y="132" width="162" height="14"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement>
+						<font fontName="Arial" size="8"/>
+					</textElement>
+					<text><![CDATA[F:__________________________________]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552" key="staticText-1" x="184" y="158" width="162" height="11"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement textAlignment="Center">
+						<font fontName="Arial" size="8"/>
+					</textElement>
+					<text><![CDATA[___________________________________]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="8e37bd84-3b2d-4f23-8a63-b84c3d8d4fcb" x="184" y="169" width="162" height="10"/>
+					<textElement textAlignment="Center">
+						<font fontName="Arial" size="7"/>
+					</textElement>
+					<text><![CDATA[Técnico MINED Nivel Central]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552" key="staticText-1" x="366" y="132" width="162" height="14"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement>
+						<font fontName="Arial" size="8"/>
+					</textElement>
+					<text><![CDATA[F:__________________________________]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="2347e2ab-ea28-4cf5-b364-7b1029c59552" key="staticText-1" x="366" y="158" width="162" height="11"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement textAlignment="Center">
+						<font fontName="Arial" size="8"/>
+					</textElement>
+					<text><![CDATA[___________________________________]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="8e37bd84-3b2d-4f23-8a63-b84c3d8d4fcb" x="366" y="169" width="162" height="10"/>
+					<textElement textAlignment="Center">
+						<font fontName="Arial" size="7"/>
+					</textElement>
+					<text><![CDATA[Técnico MINED DDE]]></text>
+				</staticText>
 			</band>
 		</groupFooter>
 	</group>
 	<group name="detalle2">
 		<groupExpression><![CDATA[$F{codigoEntidad}]]></groupExpression>
 		<groupHeader>
-			<band height="57">
+			<band height="46">
 				<componentElement>
-					<reportElement uuid="00146551-f7a9-443a-b751-cf2b76b7a1c9" key="table 2" style="table_TD" x="10" y="0" width="507" height="50" isRemoveLineWhenBlank="true"/>
+					<reportElement uuid="00146551-f7a9-443a-b751-cf2b76b7a1c9" key="table 2" style="table_TD" x="10" y="0" width="507" height="42" isRemoveLineWhenBlank="true"/>
 					<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 						<datasetRun subDataset="dsDetalleProve" uuid="0ea60642-20d6-422f-9d7a-25f6b2505146">
 							<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstPorcentajeEval})]]></dataSourceExpression>
@@ -355,9 +454,9 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 		<band splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="71" splitType="Stretch">
+		<band height="48" splitType="Stretch">
 			<componentElement>
-				<reportElement uuid="679c5164-eb9a-4347-9b1f-d4c2db9b354c" key="table" style="table_TD" x="0" y="16" width="528" height="55"/>
+				<reportElement uuid="679c5164-eb9a-4347-9b1f-d4c2db9b354c" key="table" style="table_TD" x="10" y="14" width="507" height="34"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 					<datasetRun subDataset="dsDetalleItem" uuid="1ec46f45-7cdf-4477-abc8-51e7367eba23">
 						<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstDetalleItem})]]></dataSourceExpression>
@@ -505,7 +604,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 				</jr:table>
 			</componentElement>
 			<textField isBlankWhenNull="false">
-				<reportElement uuid="c89610dd-e8b5-4071-a79e-c44be59352dc" key="textField-1" x="0" y="0" width="528" height="16"/>
+				<reportElement uuid="c89610dd-e8b5-4071-a79e-c44be59352dc" key="textField-1" x="0" y="0" width="528" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -515,7 +614,7 @@ concat("a) Las solicitudes de cotizaciones se entregaron en fecha ").concat($F{f
 				<textElement textAlignment="Justified">
 					<font fontName="Arial" size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA["C) Tomando en consideración lo anterior, la comisión recomienda adjudicar, según el siguiente detalle:"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["c) Tomando en consideración lo anterior, la comisión recomienda adjudicar, según el siguiente detalle:"]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
